2004-06-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_set_playing): remove some
	duplicate code

2004-06-14  Bastien Nocera  <hadess@hadess.net>

	* src/video-utils.c: (totem_display_is_local): only consider display
	to be non-local if there is a hostname part of the display name
	(Closes: #143810)

2004-06-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: make it possible to stream samples from
	allofmp3.com (Closes: #144149)

2004-06-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-v4l-selection.c: (bacon_v4l_selection_init):
	* src/bacon-video-widget-properties.c:
	* src/totem-pl-parser.c:
	* src/totem-playlist.c:
	* src/totem-screenshot.c: more G_DEFINE_TYPE changes (yay for
	Matthias)

2004-06-09  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-v4l-selection.c:
	* src/bacon-video-widget-properties.c:
	* src/egg-recent-util.c:
	* src/totem-mozilla-plugin.c:
	* src/totem-mozilla-viewer.c:
	* src/totem-pl-parser.c:
	* src/totem-playlist.c:
	* src/totem-private.h:
	* src/totem-screenshot.c:
	* src/totem-statusbar.c:
	* src/vanity.c:
	* src/video-dev.c: all hail to our new gi18n.h overlords, take 3
	(I just love when glib allows me to remove code)

2004-06-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.c: (totem_plugin_fork): Look for the plugin
	in the right location (Patch by James Ogley
	<james.ogley@pinnacle.co.uk>) (Closes: #144002)

2004-06-08  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/bacon-video-widget-xine.c: (xine_event_message),
	(xine_error): fix a problem where filenames containing escape codes
	(for example file:///foo%20bar) could cause the reason of an error
	not to appear in the dialog
	* src/totem.c: (totem_action_error), (action_toggle_playlist),
	(totem_action_set_mrl), (on_show_playlist1_activate),
	(totem_action_handle_key), (on_window_key_press_event):
	Handle Ctrl+P for the playlist even in hidden controls mode

============ Version 0.99.12
