@@ -1,3 +1,11 @@
+2004-06-21  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_init):
+	* src/bacon-video-widget-xine.c: (bacon_video_widget_init):
+	* src/totem-remote.c: (totem_remote_class_init),
+	(totem_remote_init):
+	* src/totem-statusbar.c: use G_DEFINE_TYPE (more)
+
 2004-06-14  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-playlist.c: (totem_playlist_set_playing): remove some
